Disable momentum scrolling - fixes line numbers and tearing issues on iOS

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,7 +12,7 @@
     height: auto;
     z-index: 2;
     overflow: auto;
-    -webkit-overflow-scrolling: touch;
+    /*-webkit-overflow-scrolling: touch;*/
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     -ms-transform: translate3d(0, 0, 0);
